--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "longhinsamuele/yii2-round-switch-column",
+    "name": "samuelelonghin/yii2-round-switch-column",
     "description": "Round switch ToggleColumn for Yii2 GridView",
     "keywords": [
         "yii2",
@@ -16,6 +16,10 @@
         "source": "https://github.com/nick-denry/yii2-round-switch-column"
     },
     "authors": [
+        {
+            "name": "Nick Denry",
+            "email": "nick.denry@gmail.com"
+        },
         {
             "name": "Samuele Longhin",
             "email": "longhin.samuele@outlook.com"
