--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "switch",
         "round"
     ],
+    "version": "1.1.3",
     "type": "yii2-extension",
     "license": "MIT",
     "homepage": "https://github.com/nick-denry/yii2-round-switch-column",
@@ -27,8 +28,8 @@
     ],
     "require": {
         "yiisoft/yii2": ">=2.0.8",
-        "php": ">=5.6"
-
+        "php": ">=5.6",
+        "yiisoft/yii2-bootstrap5": ">=2.0.0"
     },
     "autoload": {
         "psr-4": {
