--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "switch",
         "round"
     ],
-    "version": "1.1.3",
+    "version": "1.1.4",
     "type": "yii2-extension",
     "license": "MIT",
     "homepage": "https://github.com/samuelelonghin/yii2-round-switch-column",
@@ -29,7 +29,7 @@
     "require": {
         "yiisoft/yii2": ">=2.0.8",
         "php": ">=5.6",
-        "yiisoft/yii2-bootstrap5": ">=2.0.0"
+        "yiisoft/yii2-bootstrap5": "*"
     },
     "autoload": {
         "psr-4": {
